[package]
name = "np1-rust"
version = "0.1.0"
edition = "2021"
authors = ["National Payroll One <nationalpayrollone@gmail.com", "Raymond Mendelovits <raymondmendelovits@gmail.com"]
rust-version = "1.75.0"

license = "GPL-3.0-or-later"
homepage = "https://github.com/nationalpayrollone/np1-rust"
repository = "https://github.com/nationalpayrollone/np1-rust"
documentation = "https://docs.rs/np1-rust/0.1.0/"
readme = "README-crates.io.md"

description = """
This program calculates payroll following the Payroll Deductions Formulas - 119th Edition Effective January 1, 2024
NOTE: Currently only works in Canada, currently under development, please only use this for testing purposes at the moment
For more details see https://www.canada.ca/en/revenue-agency/services/forms-publications/payroll/t4127-payroll-deductions-formulas/t4127-jan/t4127-jan-payroll-deductions-formulas-computer-programs.html
"""

keywords = ["payroll", "Canada", "api"]
categories = ["finance"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# serde = { version = "1.0.195", features = ["derive"] } We will be using serde when dealing with end to end flow
# serde_json = "1.0.111"
time = "0.2.23"